--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Implementation of bigandy.xyz using react, socket.io and express",
   "main": "index.js",
+  "repository": "git@github.com:bigandy/react-socket.git",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "npm-run-all --parallel server webpack",
+    "server": "nodemon server.js",
+    "webpack": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,11 +15,27 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
+    "jquery": "^2.2.0",
     "nodemon": "^1.8.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "redis": "^2.4.2",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
-    "react": "^0.14.7"
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.1",
+    "babel-eslint": "^4.1.8",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-webpack": "^6.3.14",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-loader": "^1.2.1",
+    "eslint-plugin-react": "^3.16.1",
+    "npm-run-all": "^1.5.1",
+    "webpack": "^1.12.13"
   }
 }
