--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "git@github.com:bigandy/react-socket.git",
   "scripts": {
     "start": "npm-run-all --parallel server webpack",
-    "server": "nodemon server.js",
+    "babel-node": "babel-node",
+    "server": "nodemon --exec npm run babel-node -- server.js",
     "webpack": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,11 +15,13 @@
   "author": "Andrew JD Hudson <ahudson@gmail.com> (https://big-andy.co.uk)",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.4.1",
     "express": "^4.13.3",
     "jquery": "^2.2.0",
     "nodemon": "^1.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "redis": "^2.4.2",
     "socket.io": "^1.4.5"
   },
@@ -32,7 +35,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
+    "eslint-config-airbnb": "^5.0.1",
     "eslint-loader": "^1.2.1",
     "eslint-plugin-react": "^3.16.1",
     "npm-run-all": "^1.5.1",
